--- a/sallesense/Properties/launchSettings.json
+++ b/sallesense/Properties/launchSettings.json
@@ -15,12 +15,28 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SallseSense": {
+    "SallseSense (Development)": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "SallseSense (School)": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "School"
+      }
+    },
+    "SallseSense (Home)": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Home"
       }
     }
   }
